--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: BSCValidatorSet
-    network: bsc
+    network: mainnet
     source:
       address: '0x0000000000000000000000000000000000001000'
       abi: BSCValidatorSet
@@ -14,11 +14,11 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ../src/blocks/index.ts
+      file: ./src/blocks/index.ts
       entities:
         - Block
       abis:
         - name: BSCValidatorSet
-          file: ../abis/BSCValidatorSet.json
+          file: ./abis/BSCValidatorSet.json
       blockHandlers:
         - handler: handleBlock
