--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/ethereum-blocks",
     "create-local": "graph create blocklytics/bsc-blocks --node http://127.0.0.1:8020",
-    "remove-local": "graph remove --node http://localhost:8020/ blocklytics/ethereum-blocks",
+    "remove-local": "graph remove blocklytics/bsc-blocks --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy blocklytics/bsc-blocks --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy-rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/rinkeby-blocks",
     "deploy-kovan": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/kovan-blocks",
