--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/ethereum-blocks",
-    "create-local": "graph create block/bsc-blocks --node http://127.0.0.1:8020",
-    "remove-local": "graph remove block/bsc-blocks --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy block/bsc-blocks --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "create-local": "graph create blocks/bsc-blocks --node http://127.0.0.1:8020",
+    "remove-local": "graph remove blocks/bsc-blocks --node http://127.0.0.1:8020",
+    "deploy-local": "graph deploy blocks/bsc-blocks --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy-rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/rinkeby-blocks",
     "deploy-kovan": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/kovan-blocks",
     "deploy-goerli": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ blocklytics/goerli-blocks",
